--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Gitprojects.loader.js";
+      var loaderUrl = buildUrl + "/GravityTrailsGit.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Gitprojects.data.gz",
-        frameworkUrl: buildUrl + "/Gitprojects.framework.js.gz",
-        codeUrl: buildUrl + "/Gitprojects.wasm.gz",
+        dataUrl: buildUrl + "/GravityTrailsGit.data.unityweb",
+        frameworkUrl: buildUrl + "/GravityTrailsGit.framework.js.unityweb",
+        codeUrl: buildUrl + "/GravityTrailsGit.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CLGravityTrailsEasierToDo",
